Fix plugin reference, simplify code and remove use of boxed number constructor
Change-Id: I100dcc73a01da674cd05ccff9fbaf7cc3e1a1def